tests/semantic/comp_clauses/comp_clauses.err
Error: Non-symbol use for string function in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
--^----------------------------------------------------
Error: Non-symbol operand for string function in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
------^------------------------------------------------
Error: Non-symbol operand for string function in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
--------^----------------------------------------------
3 errors generated, evaluation aborted
